--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,12 @@ spring:
       properties:
         hibernate:
           dialect: org.hibernate.dialect.PostgreSQL81Dialect
+
 security:
   jwt:
     secret-key: verysecretkey12345
+
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
