--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.2.4'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id "java"
+    id "org.springframework.boot" version "3.2.4"
+    id "io.spring.dependency-management" version "1.1.4"
 }
 
-group = 'upce'
-version = '0.0.1-SNAPSHOT'
+group = "upce"
+version = "0.0.1-SNAPSHOT"
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility = "21"
 }
 
 configurations {
@@ -22,22 +22,22 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.projectlombok:lombok'
-    runtimeOnly 'org.postgresql:postgresql'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-    implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.11.0'
-    runtimeOnly 'com.h2database:h2'
-    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3.1'
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    compileOnly "org.projectlombok:lombok"
+    developmentOnly "org.springframework.boot:spring-boot-devtools"
+    annotationProcessor "org.projectlombok:lombok"
+    runtimeOnly "org.postgresql:postgresql"
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
+    testImplementation "org.springframework.security:spring-security-test"
+    implementation group: "com.auth0", name: "java-jwt", version: "4.4.0"
+    testImplementation group: "org.mockito", name: "mockito-core", version: "5.11.0"
+    runtimeOnly "com.h2database:h2"
+    implementation group: "org.apache.httpcomponents.client5", name: "httpclient5", version: "5.3.1"
 }
 
-tasks.named('test') {
+tasks.named("test") {
     useJUnitPlatform()
 }
