--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     testImplementation group: "org.mockito", name: "mockito-core", version: "5.11.0"
     runtimeOnly "com.h2database:h2"
     implementation group: "org.apache.httpcomponents.client5", name: "httpclient5", version: "5.3.1"
+    testImplementation group: 'com.h2database', name: 'h2', version: '2.2.224'
 }
 
 tasks.named("test") {
